Basic set-up of project

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebbLab3Context": "Server=(localdb)\\mssqllocaldb;Database=WebbLab3Context-8f1bbb57-dac5-4222-b6cb-34bdf8c83e70;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
